src/test/ui/generator/metadata-sufficient-for-layout.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/metadata-sufficient-for-layout.rs:10:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: fatal error triggered by #[rustc_error]
  --> $DIR/metadata-sufficient-for-layout.rs:28:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

